Added account dropdown

--- a/src/Components/App/App.scss
+++ b/src/Components/App/App.scss
@@ -4,5 +4,8 @@ $primary-color: #CC021B;
     display: flex;
     flex-direction: column;
     background-color: whitesmoke;
+}
+
+* {
     box-sizing: border-box;
 }
