Profile picture added

--- a/src/Components/ChatPopup/ChatPopup.scss
+++ b/src/Components/ChatPopup/ChatPopup.scss
@@ -99,7 +99,7 @@ $primary-color: #CC021B;
             label {
                 font-family: "Monserrat" sans-serif;
                 font-size: 0.9em;
-                font-weight: bold;
+                font-weight: 600;
                 opacity: 0.6;
                 margin-bottom: 0.5em;
             }
