--- a/src/Components/Checkout/Checkout.scss
+++ b/src/Components/Checkout/Checkout.scss
@@ -3,6 +3,7 @@
 $primary-color: #CC021B;
 
 .checkout {
+    margin-top: 4em;
     width:100%;
     background-color: #f5f5f5;
     padding: 1em;
@@ -151,6 +152,12 @@ $primary-color: #CC021B;
         .checkout__total {
             font-size: 1.7em;
         }
+    }
+}
+
+@media only screen and (min-width: 1200px) {
+    .checkout {
+        margin-top: 6em;
     }
 }
 
