Small input fix

--- a/src/Components/CustomInput/CustomInput.scss
+++ b/src/Components/CustomInput/CustomInput.scss
@@ -18,6 +18,7 @@ $primary-color: #CC021B;
         margin: 1em 1em;
 
         label {
+            cursor: pointer;
             font-family: "Monserrat" sans-serif;
             font-size: 0.9em;
             font-weight: 600;
