--- a/src/Components/Store/Store.scss
+++ b/src/Components/Store/Store.scss
@@ -1,8 +1,9 @@
-$primary-color: #CC021B;
+$primary-color: #cc021b;
 
 .store {
-    padding: 4em;
-    padding-inline: 7em;
-    margin-left: 20em;
-    background-color: rgb(245, 245, 245);
+  padding: 4em;
+  padding-top: 7rem;
+  padding-inline: 7em;
+  margin-left: 20em;
+  background-color: rgb(245, 245, 245);
 }
